# nft-pipeline

./: pyproject.toml
extract_load/: .test.env
extract_load/src/: abstract_extract_load.py  config.py  db_connection.py  opensea_extract_load.py
extract_load/tests/: conftest.py  test_opensea_extract_load.py
ingest/: .test.env  main.py
ingest/src/: config.py
ingest/src/pipelines/: __init__.py  abstract_json_pipeline.py  abstract_pipeline.py  abstract_subgraph_pipeline.py  abstract_subgraph_sales_pipeline.py  art_blocks_sales_pipeline.py  autoglyphs_transfers_pipeline.py  bayc_transfers_pipeline.py  crypto_punk_sales_pipeline.py  crypto_punk_transfers_pipeline.py  nouns_dao_auction_pipeline.py  open_sea_sales.py
ingest/tests/: conftest.py  test_art_blocks_sales_pipeline.py  test_autoglyphs_transfers_pipeline.py  test_bayc_transfers_pipeline.py  test_crypto_punk_sales_pipeline.py  test_crypto_punk_transfers_pipeline.py  test_nouns_dao_auction_pipeline.py  test_open_sea_sales_pipeline.py  test_opensea_extract_load.py
ingestion/: .test.env  main.py  pyproject.toml
ingestion/src/: abstract_extract_load.py  config.py  db_connection.py  opensea_extract_load.py
ingestion/tests/: conftest.py
transform/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
transform/data/: currency_conversion.csv  top_projects.csv
transform/macros/: generate_schema_name.sql
transform/models/marts/: dim_account.sql  dim_project.sql  fct_account_pnl.sql  fct_current_ownership.sql  fct_platform_accounts_pnl.sql  fct_platform_current_ownership.sql  fct_profit_and_loss.sql  (+3 more)
(+16 files in other folders)
