[tool.poetry]
name = "nft_pipeline"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
dbt = "^0.20.1"
pytest = "^6.2.4"
requests = "^2.26.0"
snowflake = "^0.0.3"
python-dotenv = "^0.19.0"
pytest-dotenv = "^0.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
